<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.eric.thefinalappofq32016.MainActivity"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lblSushi"
        android:id="@+id/lblSushi"
        android:layout_gravity="center_horizontal"
        android:textSize="32dp"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/nameSushi"
        android:layout_gravity="center_horizontal"
        android:hint="@string/nameSushi"
        android:layout_above="@+id/describeSushi"
        android:layout_centerHorizontal="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/describeSushi"
        android:layout_gravity="center_horizontal"
        android:hint="@string/describeSushi"
        android:layout_above="@+id/btnIMG"
        android:layout_centerHorizontal="true" />

    <ImageButton
        android:layout_width="300dp"
        android:layout_height="300dp"
        android:id="@+id/btnIMG"
        android:layout_gravity="center_horizontal"
        android:src="@drawable/sushi_img_01"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:onClick="launchCamera" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btnAdd"
        android:id="@+id/btnAdd"
        android:textSize="25dp"
        android:onClick="addButtonClicked"
        android:layout_above="@+id/sushiList"
        android:layout_alignParentStart="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btnDelete"
        android:id="@+id/btnDelete"
        android:layout_gravity="right"
        android:onClick="deleteButtonClicked"
        android:textSize="25dp"
        android:layout_above="@+id/sushiList"
        android:layout_alignParentEnd="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sushiList"
        android:id="@+id/sushiList"
        android:layout_gravity="center_horizontal"
        android:textSize="25dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true" />

</RelativeLayout>
